# Miriway

./: .gitignore  CMakeLists.txt  CONFIGURING_MIRIWAY.md  README.md  miriway  miriway-background  miriway-launcher  miriway-panel  miriway-run  miriway-run-shell.cpp  miriway-session.in  miriway-shell.config  miriway-shell.config.in  miriway-terminal  miriway-unsnap  miriway.cpp  miriway.desktop  miriway.desktop.in  miriway_app_switcher.cpp  miriway_app_switcher.h  miriway_child_control.cpp  miriway_child_control.h  miriway_commands.cpp  miriway_commands.h  miriway_documenting_store.cpp  miriway_documenting_store.h  miriway_ext_workspace_v1.cpp  miriway_ext_workspace_v1.h  miriway_magnifier.cpp  miriway_magnifier.h  miriway_policy.cpp  miriway_policy.h  miriway_workspace_hooks.h  miriway_workspace_manager.cpp  miriway_workspace_manager.h  miriway_workspace_observer.h  mu.sh  sourcecraft.yaml  uninstall-mirway.bash
.github/workflows/: cmake.yml  refresh-downstreams.yml  snap.yml
app-switcher/: CMakeLists.txt  application_switcher.cpp  application_switcher.h  default_font.cpp  default_font.h
example-configs/: miriway-config-Budgie.bash  miriway-config-LXQT.bash  miriway-config-LXQt.bash  miriway-config-MATE.bash  miriway-config-SWAY.bash  miriway-config-XFCE.bash  miriway-config-alan_g.bash
sddm/: miriway.conf.in
snap/: snapcraft.yaml
snap-utils/etc/xdg/xdg-miriway/: miriway-shell.config-snap
snap-utils/usr/libexec/: miriway-session-startup-snap
snap/hooks/: install  remove
spread/: .extension
spread/general/test/: task.yaml
systemd/etc/xdg/xdg-desktop-portal-wlr/: config
systemd/usr/lib/systemd/user/: miriway-session.target
systemd/usr/libexec/: miriway-session-shutdown  miriway-session-startup  miriway-session-startup-snap  miriway-session-startup.in
systemd/usr/share/xdg-desktop-portal/portals/: mir.portal  wlr.portal
wayland-generated/: CMakeLists.txt  ext-workspace-v1_wrapper.cpp  ext-workspace-v1_wrapper.h
